update styling for index and show pages

--- a/app/views/beers/new.html.erb
+++ b/app/views/beers/new.html.erb
@@ -1,2 +1,5 @@
-<h1>Add a beer</h1>
+<header class="align-center">
+	<h2>Add a beer</h2>
+</header>
+
 <%= render partial: 'beers/form', locals: {beer: @beer} %>
