--- a/app/views/user_beers/index.html.erb
+++ b/app/views/user_beers/index.html.erb
@@ -4,7 +4,7 @@
 
 
 <div class="filter">
-  <h4>Filter Beer List:</h4>
+  <h4>Filters</h4>
   <% if @userbeers %>
     <%= form_tag(user_user_beers_path, method: "get") do %>
       <div class="select-wrapper 6u$ 12u$(medium)">
