--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,6 @@
-<h1>Register for a BeerMe Account</h1>
+<header class="align-center">
+	<h2>Register for a BeerMe Account</h2>
+</header>
 
 <%= form_for(@user) do |f| %>
   <%= f.label :first_name %>
