--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,4 +1,7 @@
-<h1>Beer Categories</h1>
+<header class="align-center">
+	<h2>Categories</h2>
+</header>
+
 <ul>
   <% @categories.each do |category| %>
     <li><%= link_to category.name, category_path(category) %> <%= "(#{category.beers.count})" if category.beers %></li>
