--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,6 +4,19 @@
 
 <div class="12u$">
 	<%= form_for(@user) do |f| %>
+		<% if @user.errors.any? %>
+			<div id="error_explanation">
+				<h2>
+					<%= pluralize(@user.errors.count, "error") %>
+					prohibited this user from being created:
+				</h2>
+				<ul>
+					<% @user.errors.full_messages.each do |msg| %>
+						<li><%= msg %></li>
+					<% end %>
+				</ul>
+			</div>
+		<% end %>
 	<!-- want to center the fields without centering text -->
 		<div class="6u 12u$(xsmall)">
 			<%= f.label :first_name %>
