--- a/app/views/beers/new.html.erb
+++ b/app/views/beers/new.html.erb
@@ -1,5 +1,5 @@
 <header class="align-center">
-	<h2>Add a beer</h2>
+	<h2>Add a beer to your list</h2>
 </header>
 
 <%= render partial: 'beers/form', locals: {beer: @beer} %>
