update todo and refresh db

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,7 @@
 
 		<section id="three" class="wrapper">
 	    <div class="inner">
+				<!-- need to fix the styling of this -->
 	      <% flash.each do |name, msg| %>
 	        <%= content_tag :div, msg, class: name %>
 	      <% end %>
