--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -5,7 +5,7 @@
 <div class="12u$">
 	<%= form_for(@user) do |f| %>
 		<% if @user.errors.any? %>
-			<div id="error_explanation">
+			<div class="box 6u 12u$(xsmall)" id="error_explanation">
 				<h2>
 					<%= pluralize(@user.errors.count, "error") %>
 					prohibited this user from being created:
