--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -16,32 +16,6 @@
     <%= submit_tag "Apply Filter" %>
   <% end %>
 </div>
-
-<!-- <div class="filter">
-  <h4>Filter Beer List:</h4>
-  <% if @userbeers %>
-    <%= form_tag(user_beers_path, method: "get") do %>
-      <%= label_tag "Category" %>
-      <%= select_tag "category", options_from_collection_for_select(@categories, "id", "name"), include_blank: true %>
-      <%= label_tag "Brewery" %>
-      <%= select_tag "brewery", options_from_collection_for_select(@breweries, "id", "name"), include_blank: true %>
-      <%= submit_tag "Apply Filter" %>
-    <% end %>
-  <% else %>
-    <%= form_tag(beers_path, method: "get") do %>
-      <div class="select-wrapper 6u$ 12u$(medium)">
-        <%= label_tag "Category" %>
-        <%= select_tag "category", options_from_collection_for_select(@categories, "id", "name"), include_blank: true %>
-      </div>
-      <div class="select-wrapper 6u$ 12u$(medium)">
-        <%= label_tag "Brewery" %>
-        <%= select_tag "brewery", options_from_collection_for_select(@breweries, "id", "name"), include_blank: true %> <br>
-      </div>
-      <%= submit_tag "Apply Filter" %>
-    <% end %>
-  <% end %>
-</div> -->
-
 <br> </br>
 <div class="list">
   <!-- need to figure out to refactor this so that the links go to the right place -->
@@ -50,13 +24,13 @@
   <% if @beers && !@beers.empty? %>
     <ul>
       <% @beers.each do |beer| %>
-        <li><%= link_to beer.brewery.name, brewery_path(beer.brewery) %>: <%= link_to beer.name, beer_path(beer) %> (<%= beer.abv %>)</li>
+        <li><%= link_to beer.brewery.name, brewery_path(beer.brewery) %>: <%= link_to beer.name, beer_path(beer) %> (abv: <%= beer.abv %>%)</li>
       <% end %>
     </ul>
   <% elsif @userbeers && !@userbeers.empty? %>
     <ul>
       <% @userbeers.each do |beer| %>
-        <li><%= link_to beer.brewery.name, brewery_path(beer.brewery) %>: <%= link_to beer.name, user_beer_path(current_user, beer) %> (<%= beer.abv %>)</li>
+        <li><%= link_to beer.brewery.name, brewery_path(beer.brewery) %>: <%= link_to beer.name, user_beer_path(current_user, beer) %> (abv: <%= beer.abv %>%)</li>
       <% end %>
     </ul>
   <% else %>
