--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -5,6 +5,6 @@
 
 <div class="box">
   <p><strong>Style: </strong><%= link_to @beer.category.name, category_path(@beer.category) %></p>
-  <p><strong>ABV: </strong><%= @beer.abv%> </p>
+  <p><strong>ABV: </strong><%= @beer.abv%>% </p>
   <p><strong>Description: </strong><%= @beer.description %></p>
 </div>
