--- a/app/views/breweries/show.html.erb
+++ b/app/views/breweries/show.html.erb
@@ -27,7 +27,7 @@
   <% else %>
     <ul>
       <% @beers.each do |beer| %>
-        <li><%= link_to beer.name, beer_path(beer) %> (<%= beer.abv %>)</li>
+        <li><%= link_to beer.name, beer_path(beer) %> (abv: <%= beer.abv %>%)</li>
       <% end %>
     </ul>
   <% end %>
