--- a/app/views/user_beers/show.html.erb
+++ b/app/views/user_beers/show.html.erb
@@ -16,11 +16,15 @@
 <% if @userbeer.notes %>
   <p><%= @userbeer.notes%></p>
 <% else %>
-  <%= form_tag user_user_beer_path(current_user.id, @userbeer.id) do %>
+	<%= form_for (@userbeer) do |f| %>
+		<%= f.text_area :notes, nil, size: "60x5"%> <br>
+		<%= f.submit "Add Note" %>
+	<% end %>
+  <!-- <%= form_tag user_user_beer_path(current_user.id, @userbeer.id) do %>
     <%= hidden_field_tag('_method', 'put') %>
     <%= text_area_tag "user_beer[notes]", nil, size: "60x5"%> <br>
     <%= submit_tag "Add Note" %>
-  <% end %>
+  <% end %> -->
 <% end %>
 
 <!-- show edit link for notes -->
