--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -3,7 +3,7 @@
 <%= link_to "All Categories", categories_path %>
 <% if current_user %>
   | <%= link_to "My Beers", user_user_beers_path(current_user) %>
-  <%= link_to "Add New Beer", new_beer_path(current_user) %>
+  <%= link_to "Add New Beer", new_user_beer_path(current_user) %>
   <%= link_to "Log Out", signout_path, method: :delete%>
 <% else %>
   | <%= link_to "Sign Up", new_user_path %>
