fix bug in beers#new form

--- a/app/views/beers/new.html.erb
+++ b/app/views/beers/new.html.erb
@@ -2,4 +2,4 @@
 	<h2>Add a beer to your list</h2>
 </header>
 
-<%= render partial: 'beers/form', locals: {beer: @beer} %>
+<%= render partial: 'beers/form', locals: {user: @user, beer: @beer} %>
