--- a/app/views/beers/_form.html.erb
+++ b/app/views/beers/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(beer) do |f| %>
+<%= form_for([user, beer]) do |f| %>
 
   <% if beer.errors.any? %>
     <div class="box" id="error_explanation">
