--- a/app/views/user_beers/index.html.erb
+++ b/app/views/user_beers/index.html.erb
@@ -27,7 +27,7 @@
   <!-- need to work it out so that this page can be used as user landing and beer index...partial? -->
   <% if !@userbeers.empty? %>
     <ul>
-			<!-- need to fix so that it uses the user_beer id not the beer id -->
+			<!-- why does this throw an error when you first go to the page vs filters? -->
       <% @userbeers.each do |userbeer| %>
         <li><%= link_to userbeer.beer.brewery.name, brewery_path(userbeer.beer.brewery) %>: <%= link_to userbeer.beer.name, user_user_beer_path(current_user, userbeer.id) %> (abv: <%= userbeer.beer.abv %>%)</li>
       <% end %>
