remove pry and re-route button on home page

--- a/app/views/user_beers/index.html.erb
+++ b/app/views/user_beers/index.html.erb
@@ -14,7 +14,7 @@
 
       <div class="select-wrapper 6u$ 12u$(medium)">
         <%= label_tag "Brewery" %>
-        <%= select_tag "brewery", options_from_collection_for_select(@breweries, "id", "name"), prompt: "All" %>
+        <%= select_tag "brewery", options_from_collection_for_select(@breweries, "id", "name"), prompt: "All" %> <br>
       </div>
 
 			<!-- <div class="select-wrapper 6u$ 12u$(medium)">
