--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -22,7 +22,7 @@
       </div>
 
       <footer>
-        <%= link_to "Get Started", signin_path, class: "button" %>
+        <%= link_to "Get Started", new_user_path, class: "button" %>
       </footer>
     </div>
   </section>
