fix bug with abv validation

--- a/app/views/beers/_form.html.erb
+++ b/app/views/beers/_form.html.erb
@@ -55,7 +55,7 @@
         <% end %>
       </datalist> <br />
     <% end %>
-    <%= f.label :abv %>
+    <%= f.label "ABV (%)"%>
     <%= f.text_field :abv %> <br />
 
     <%= f.label :description %>
