--- a/app/views/beers/_form.html.erb
+++ b/app/views/beers/_form.html.erb
@@ -19,8 +19,8 @@
     <!-- text field with auto complete, also drop down menu -->
     <!-- will need to convert this to a nested form -->
     <%= f.fields_for :brewery do |b| %>
-      <%= b.label "Name" %>
-      <%= b.text_field :name, list: "breweries_autocomplete" %>
+      <%= b.label "Name*" %>
+      <%= b.text_field :name, list: "breweries_autocomplete", required: true %>
       <datalist id="breweries_autocomplete">
         <% Brewery.all.each do |brewery| %>
           <option value="<%= brewery.name %>">
@@ -35,8 +35,8 @@
   <!-- can you do a fields_for the beer? -->
   <fieldset class="box">
     <legend>Beer</legend>
-    <%= f.label :name %>
-    <%= f.text_field :name, list: "beers_autocomplete" %>
+    <%= f.label "Name*" %>
+    <%= f.text_field :name, list: "beers_autocomplete", required: true %>
     <datalist id="beers_autocomplete">
       <% Beer.all.each do |beer| %>
         <option value="<%= beer.name %>">
@@ -47,15 +47,15 @@
     <!-- text field with auto complete, also drop down menu -->
     <!-- will need to convert this to a nested form -->
     <%= f.fields_for :category do |c| %>
-      <%= c.label "Type" %>
-      <%= c.text_field :name, list: "categories_autocomplete" %>
+      <%= c.label "Type*" %>
+      <%= c.text_field :name, list: "categories_autocomplete", required: true %>
       <datalist id="categories_autocomplete">
         <% Category.all.each do |category| %>
           <option value="<%= category.name %>">
         <% end %>
       </datalist> <br />
     <% end %>
-    <%= f.label "ABV (%)"%>
+    <%= f.label "ABV* (%)"%>
     <%= f.text_field :abv %> <br />
 
     <%= f.label :description %>
