add delete beer button to user_beer#show page

--- a/app/views/user_beers/_delete_form.html.erb
+++ b/app/views/user_beers/_delete_form.html.erb
@@ -1,1 +1,1 @@
-<%= link_to "Delete", [user, beer], method: :delete, data: {confirm: "Are you sure you want to delete this beer?"}%>
+<%= link_to "Remove Beer From List", [user, beer], method: :delete, data: {confirm: "Are you sure you want to delete this beer?"}%>
