have filters side-by-side on user_beer#index

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -2018,7 +2018,7 @@ textarea:focus {
 
 .select-wrapper {
 text-decoration: none;
-display: block;
+display: inline-grid;
 position: relative;
 }
 
