--- a/app/views/user_beers/index.html.erb
+++ b/app/views/user_beers/index.html.erb
@@ -7,12 +7,12 @@
   <h4>Filters</h4>
   <% if @userbeers %>
     <%= form_tag(user_user_beers_path, method: "get") do %>
-      <div class="select-wrapper 6u$ 12u$(medium)">
+      <div class="select-wrapper 3u$">
         <%= label_tag "Category" %>
         <%= select_tag "category", options_from_collection_for_select(@categories, "id", "name"), prompt: "All" %>
       </div>
 
-      <div class="select-wrapper 6u$ 12u$(medium)">
+      <div class="select-wrapper 3u$">
         <%= label_tag "Brewery" %>
         <%= select_tag "brewery", options_from_collection_for_select(@breweries, "id", "name"), prompt: "All" %> <br>
       </div>
@@ -21,8 +21,9 @@
 				<%= label_tag "Status" %>
 				<%= select_tag "status", options_for_select([["Tried", true], ["Want to try", false]]), prompt: "All" %> <br>
 			</div> -->
-
-      <%= submit_tag "Apply Filter" %>
+			<div class="3u$">
+				<%= submit_tag "Apply Filter" %>
+			</div>
     <% end %>
   <% end %>
 </div>
@@ -34,6 +35,7 @@
   <% if !@userbeers.empty? %>
     <ul>
 			<!-- why does this throw an error when you first go to the page vs filters? -->
+			<!-- this list is sorted by beer name not brewery name for now -->
       <% @userbeers.alpha_sorted.each do |userbeer| %>
         <li><%= link_to userbeer.beer.brewery.name, brewery_path(userbeer.beer.brewery) %>: <%= link_to userbeer.beer.name, user_user_beer_path(current_user, userbeer.id) %> (abv: <%= userbeer.beer.abv %>%) <%= link_to content_tag(:i, nil, class: "fa fa-trash-o fa-6"), [current_user, userbeer], method: :delete, data: {confirm: "Are you sure you want to delete this beer?"}%></li>
       <% end %>
