--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -2,38 +2,48 @@
 	<h2>Beers</h2>
 </header>
 
-<div class="filter">
-  <h4>Filter Beer List:</h4>
-  <%= form_tag(beers_path, method: "get") do %>
-    <div class="select-wrapper 6u$ 12u$(medium)">
-      <%= label_tag "Category" %>
-      <%= select_tag "category", options_from_collection_for_select(@categories, "id", "name"), prompt: "All" %>
-    </div>
-    <div class="select-wrapper 6u$ 12u$(medium)">
-      <%= label_tag "Brewery" %>
-      <%= select_tag "brewery", options_from_collection_for_select(@breweries, "id", "name"), prompt: "All" %> <br>
-    </div>
-    <%= submit_tag "Apply Filter" %>
-  <% end %>
-</div>
-<br> </br>
-<div class="list">
-  <!-- need to figure out to refactor this so that the links go to the right place -->
-  <!-- need to work it out so that this page can be used as user landing and beer index...partial? -->
+<div class="row 200%">
+	<div class="6u 12u$(medium)">
+	<h4>Filter Beer List:</h4>
+		<div class="row uniform">
+		  <%= form_tag(beers_path, method: "get") do %>
+		    <div class="select-wrapper 12u$">
+		      <%= select_tag "category", options_from_collection_for_select(@categories, "id", "name"), prompt: "All Categories" %> <br>
+		    </div>
+		    <div class="select-wrapper 12u$">
+		      <%= select_tag "brewery", options_from_collection_for_select(@breweries, "id", "name"), prompt: "All Breweries" %> <br>
+		    </div>
+		    <div>
+					<%= submit_tag "Apply Filter" %>
+				</div>
+		  <% end %>
+		</div>
+	</div>
 
-  <% if @beers && !@beers.empty? %>
-    <ul>
-      <% @beers.each do |beer| %>
-        <li><%= link_to beer.brewery.name, brewery_path(beer.brewery) %>: <%= link_to beer.name, beer_path(beer) %> (abv: <%= beer.abv %>%)</li>
-      <% end %>
-    </ul>
-  <% elsif @userbeers && !@userbeers.empty? %>
-    <ul>
-      <% @userbeers.each do |beer| %>
-        <li><%= link_to beer.brewery.name, brewery_path(beer.brewery) %>: <%= link_to beer.name, user_beer_path(current_user, beer) %> (abv: <%= beer.abv %>%)</li>
-      <% end %>
-    </ul>
-  <% else %>
-    <p><em>No results</em></p>
-  <% end %>
+	<div class="6u$ 12u$(medium)">
+	  <!-- need to work it out so that this page can be used as user landing and beer index...partial? -->
+	  <% if @beers && !@beers.empty? %>
+			<div class="table-wrapper">
+				<table>
+					<thead>
+						<tr>
+							<th>Brewery</th>
+							<th>Name</th>
+							<th>Abv</th>
+						</tr>
+					</thead>
+					<tbody>
+					<% @beers.each do |beer| %>
+						<tr>
+							<td><%= link_to beer.brewery.name, brewery_path(beer.brewery) %></td>
+							<td><%= link_to beer.name, beer_path(beer) %></td>
+							<td><%= beer.abv %>%</td>
+						</tr>
+					<% end %>
+				</table>
+			</div>
+	  <% else %>
+	    <p><em>No results</em></p>
+	  <% end %>
+	</div>
 </div>
