--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -4,20 +4,20 @@
 
 <div class="row 200%">
 	<div class="6u 12u$(medium)">
-	<h4>Filter Beer List:</h4>
-		<div class="row uniform">
-		  <%= form_tag(beers_path, method: "get") do %>
-		    <div class="select-wrapper 12u$">
-		      <%= select_tag "category", options_from_collection_for_select(@categories, "id", "name"), prompt: "All Categories" %> <br>
-		    </div>
-		    <div class="select-wrapper 12u$">
-		      <%= select_tag "brewery", options_from_collection_for_select(@breweries, "id", "name"), prompt: "All Breweries" %> <br>
-		    </div>
-		    <div>
-					<%= submit_tag "Apply Filter" %>
-				</div>
-		  <% end %>
-		</div>
+		<h4>Filters</h4>
+			<div class="row uniform">
+			  <%= form_tag(beers_path, method: "get") do %>
+			    <div class="select-wrapper 12u$">
+			      <%= select_tag "category", options_from_collection_for_select(@categories, "id", "name"), prompt: "All Categories" %> <br>
+			    </div>
+			    <div class="select-wrapper 12u$">
+			      <%= select_tag "brewery", options_from_collection_for_select(@breweries, "id", "name"), prompt: "All Breweries" %> <br>
+			    </div>
+			    <div>
+						<%= submit_tag "Apply Filter" %>
+					</div>
+			  <% end %>
+			</div>
 	</div>
 
 	<div class="6u$ 12u$(medium)">
@@ -33,7 +33,7 @@
 						</tr>
 					</thead>
 					<tbody>
-					<% @beers.each do |beer| %>
+					<% @beers.alpha_sorted.each do |beer| %>
 						<tr>
 							<td><%= link_to beer.brewery.name, brewery_path(beer.brewery) %></td>
 							<td><%= link_to beer.name, beer_path(beer) %></td>
