--- a/app/views/user_beers/index.html.erb
+++ b/app/views/user_beers/index.html.erb
@@ -2,45 +2,57 @@
 	<h2><%= current_user.first_name %>'s Beers</h2>
 </header>
 
+<div class="row 200%">
+	<div class="6u 12u$(medium)">
+		<h4>Filter Beer List:</h4>
+			<div class="row uniform">
+				<% if @userbeers %>
+					<%= form_tag(user_user_beers_path, method: "get") do %>
+			      <div class="select-wrapper 12u$">
+			        <%= select_tag "category", options_from_collection_for_select(@categories, "id", "name"), prompt: "All Categories" %> <br>
+			      </div>
 
-<div class="filter">
-  <h4>Filters</h4>
-  <% if @userbeers %>
-    <%= form_tag(user_user_beers_path, method: "get") do %>
-      <div class="select-wrapper 3u$">
-        <%= label_tag "Category" %>
-        <%= select_tag "category", options_from_collection_for_select(@categories, "id", "name"), prompt: "All" %>
-      </div>
-
-      <div class="select-wrapper 3u$">
-        <%= label_tag "Brewery" %>
-        <%= select_tag "brewery", options_from_collection_for_select(@breweries, "id", "name"), prompt: "All" %> <br>
-      </div>
-
-			<!-- <div class="select-wrapper 6u$ 12u$(medium)">
-				<%= label_tag "Status" %>
-				<%= select_tag "status", options_for_select([["Tried", true], ["Want to try", false]]), prompt: "All" %> <br>
-			</div> -->
-			<div class="3u$">
-				<%= submit_tag "Apply Filter" %>
+			      <div class="select-wrapper 12u$">
+			        <%= select_tag "brewery", options_from_collection_for_select(@breweries, "id", "name"), prompt: "All Breweries" %> <br>
+			      </div>
+						<!-- <div class="select-wrapper 6u$ 12u$(medium)">
+							<%= label_tag "Status" %>
+							<%= select_tag "status", options_for_select([["Tried", true], ["Want to try", false]]), prompt: "All" %> <br>
+						</div> -->
+						<div>
+							<%= submit_tag "Apply Filter" %>
+						</div>
+		    	<% end %>
+		  	<% end %>
 			</div>
-    <% end %>
-  <% end %>
-</div>
+	</div>
 
-<br> </br>
-
-<div class="list">
-  <!-- need to work it out so that this page can be used as user landing and beer index...partial? -->
-  <% if !@userbeers.empty? %>
-    <ul>
-			<!-- why does this throw an error when you first go to the page vs filters? -->
-			<!-- this list is sorted by beer name not brewery name for now -->
-      <% @userbeers.alpha_sorted.each do |userbeer| %>
-        <li><%= link_to userbeer.beer.brewery.name, brewery_path(userbeer.beer.brewery) %>: <%= link_to userbeer.beer.name, user_user_beer_path(current_user, userbeer.id) %> (abv: <%= userbeer.beer.abv %>%) <%= link_to content_tag(:i, nil, class: "fa fa-trash-o fa-6"), [current_user, userbeer], method: :delete, data: {confirm: "Are you sure you want to delete this beer?"}%></li>
-      <% end %>
-    </ul>
-  <% else %>
-    <p><em>You don't have any beers!</em></p>
-  <% end %>
+	<div class="6u$ 12u$(medium)">
+	  <!-- need to work it out so that this page can be used as user landing and beer index...partial? -->
+		<% if !@userbeers.empty? %>
+			<div class="table-wrapper">
+				<table>
+					<thead>
+						<tr>
+							<th>Brewery</th>
+							<th>Name</th>
+							<th>Abv</th>
+							<th></th>
+						</tr>
+					</thead>
+					<tbody>
+					<% @userbeers.alpha_sorted.each do |userbeer| %>
+						<tr>
+							<td><%= link_to userbeer.beer.brewery.name, brewery_path(userbeer.beer.brewery) %></td>
+							<td><%= link_to userbeer.beer.name, user_user_beer_path(current_user, userbeer.id) %></td>
+							<td><%= userbeer.beer.abv %>%</td>
+							<td><%= link_to content_tag(:i, nil, class: "fa fa-trash-o fa-6"), [current_user, userbeer], method: :delete, data: {confirm: "Are you sure you want to delete this beer?"}%></td>
+						</tr>
+					<% end %>
+				</table>
+			</div>
+		<% else %>
+	    <p><em>You don't have any beers!</em></p>
+	  <% end %>
+	</div>
 </div>
