--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -27,7 +27,7 @@
 		  <%= f.text_field :last_name %>
 		</div>
 		<div class="6u 12u$(xsmall)">
-			<%= f.label :email %>
+			<%= f.label "Email Address" %>
 		  <%= f.email_field :email %>
 		</div>
 		<div class="6u 12u$(xsmall)">
