center fields on signup page

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1765,6 +1765,13 @@ max-width: 75em;
 margin: 0 auto;
 }
 
+.center {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	width: 50%;
+}
+
 @media screen and (max-width: 1280px) {
 
 	.inner {
@@ -2161,11 +2168,10 @@ opacity: 1.0;
 }
 
 #error_explanation {
-	border: solid 1.5px red;
+	border: solid 1px red;
 }
 
 .field_with_errors {
-	/*background: #6cc091;*/
 	border-radius: 10px;
 	border: solid 2px red;
 }
