--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,14 +2,14 @@
 	<h2>Register for a BeerMe Account</h2>
 </header>
 
-<div class="12u$">
+<div class="12u center">
 	<%= form_for(@user) do |f| %>
 		<% if @user.errors.any? %>
 			<div class="box 6u 12u$(xsmall)" id="error_explanation">
-				<h2>
+				<h4>
 					<%= pluralize(@user.errors.count, "error") %>
 					prohibited this user from being created:
-				</h2>
+				</h4>
 				<ul>
 					<% @user.errors.full_messages.each do |msg| %>
 						<li><%= msg %></li>
@@ -18,25 +18,25 @@
 			</div>
 		<% end %>
 	<!-- want to center the fields without centering text -->
-		<div class="6u 12u$(xsmall)">
+		<div>
 			<%= f.label :first_name %>
-			<%= f.text_field :first_name %>
+			<%= f.text_field :first_name %> <br>
 		</div>
-		<div class="6u 12u$(xsmall)">
+		<div>
 		  <%= f.label :last_name %>
-		  <%= f.text_field :last_name %>
+		  <%= f.text_field :last_name %> <br>
 		</div>
-		<div class="6u 12u$(xsmall)">
+		<div>
 			<%= f.label "Email Address" %>
-		  <%= f.email_field :email %>
+		  <%= f.email_field :email %> <br>
 		</div>
-		<div class="6u 12u$(xsmall)">
+		<div>
 			<%= f.label "Password (at least 8 characters)"%>
-		  <%= f.password_field :password %>
+		  <%= f.password_field :password %> <br>
 		</div>
 
-		<ul class="actions">
-			<br><li><%= f.submit "Register" %></li>
-		</ul>
+		<div class="align-center">
+			<%= f.submit "Register" %>
+		</div>
 	<% end %>
 </div>
