center fields on login page

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,7 +2,7 @@
 	<h2>Register for a BeerMe Account</h2>
 </header>
 
-<div class="12u center">
+<div class="box center">
 	<%= form_for(@user) do |f| %>
 		<% if @user.errors.any? %>
 			<div class="box 6u 12u$(xsmall)" id="error_explanation">
