--- a/app/views/user_beers/index.html.erb
+++ b/app/views/user_beers/index.html.erb
@@ -4,31 +4,10 @@
 
 <div class="row 200%">
 	<div class="6u 12u$(medium)">
-		<h4>Filter Beer List:</h4>
-			<div class="row uniform">
-				<% if @userbeers %>
-					<%= form_tag(user_user_beers_path, method: "get") do %>
-			      <div class="select-wrapper 12u$">
-			        <%= select_tag "category", options_from_collection_for_select(@categories, "id", "name"), prompt: "All Categories" %> <br>
-			      </div>
-
-			      <div class="select-wrapper 12u$">
-			        <%= select_tag "brewery", options_from_collection_for_select(@breweries, "id", "name"), prompt: "All Breweries" %> <br>
-			      </div>
-						<!-- <div class="select-wrapper 6u$ 12u$(medium)">
-							<%= label_tag "Status" %>
-							<%= select_tag "status", options_for_select([["Tried", true], ["Want to try", false]]), prompt: "All" %> <br>
-						</div> -->
-						<div>
-							<%= submit_tag "Apply Filter" %>
-						</div>
-		    	<% end %>
-		  	<% end %>
-			</div>
+		<%= render partial: 'beers/beer_filters', locals: {path: user_user_beers_path, categories: @categories, breweries: @breweries} %>
 	</div>
 
 	<div class="6u$ 12u$(medium)">
-	  <!-- need to work it out so that this page can be used as user landing and beer index...partial? -->
 		<% if !@userbeers.empty? %>
 			<div class="table-wrapper">
 				<table>
