--- a/app/views/breweries/show.html.erb
+++ b/app/views/breweries/show.html.erb
@@ -11,24 +11,38 @@
 
 <h3>Beers</h3>
 
-<div class="filter">
-  <h5>Filter By Category</h5>
-  <%= form_tag("/breweries/#{@brewery.id}", method: "get") do %>
-    <div class="select-wrapper 6u$ 12u$(medium)">
-      <%= select_tag "category", options_from_collection_for_select(@categories, "id", "name"), prompt: "All" %> <br>
-    </div>
-    <%= submit_tag "Apply Filter" %>
-  <% end %>
-</div>
+<div class="row 200%">
+	<div class="6u 12u$(medium)">
+		<%= form_tag("/breweries/#{@brewery.id}", method: "get") do %>
+	    <div class="select-wrapper 6u$ 12u$(medium)">
+	      <%= select_tag "category", options_from_collection_for_select(@categories, "id", "name"), prompt: "All Categories" %> <br>
+	    </div>
+	    <%= submit_tag "Apply Filter" %>
+	  <% end %>
+	</div>
 
-<div class="list">
-  <% if @beers.empty? %>
-    <p><em>No results</em></p>
-  <% else %>
-    <ul>
-      <% @beers.each do |beer| %>
-        <li><%= link_to beer.name, beer_path(beer) %> (abv: <%= beer.abv %>%)</li>
-      <% end %>
-    </ul>
-  <% end %>
+
+	<div class="6u$ 12u$(medium)">
+		<% if !@beers.empty? %>
+			<div class="table-wrapper">
+				<table>
+					<thead>
+						<tr>
+							<th>Name</th>
+							<th>Abv</th>
+						</tr>
+					</thead>
+					<tbody>
+					<% @beers.alpha_sorted.each do |beer| %>
+						<tr>
+							<td><%= link_to beer.name, beer_path(beer) %></td>
+							<td><%= beer.abv %>%</td>
+						</tr>
+					<% end %>
+				</table>
+			</div>
+		<% else %>
+			<p><em>No results</em></p>
+		<% end %>
+	</div>
 </div>
