update display for no results on various pages

--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -29,7 +29,23 @@
 				</table>
 			</div>
 		<% else %>
-			<p><em>No results</em></p>
+			<div class="table-wrapper">
+				<table>
+					<thead>
+						<tr>
+							<th>Brewery</th>
+							<th>Name</th>
+							<th>Abv</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td><em>No results</em></td>
+							<td></td>
+							<td></td>
+						</tr>
+				</table>
+			</div>
 		<% end %>
 	</div>
 </div>
