--- a/app/views/user_beers/index.html.erb
+++ b/app/views/user_beers/index.html.erb
@@ -30,8 +30,24 @@
 					<% end %>
 				</table>
 			</div>
-		<% else %>
-	    <p><em>You don't have any beers!</em></p>
-	  <% end %>
+			<% else %>
+				<div class="table-wrapper">
+					<table>
+						<thead>
+							<tr>
+								<th>Brewery</th>
+								<th>Name</th>
+								<th>Abv</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<td><em>No results</em></td>
+								<td></td>
+								<td></td>
+							</tr>
+					</table>
+				</div>
+			<% end %>
 	</div>
 </div>
