--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -10,28 +10,6 @@
 
 <h3>Beers</h3>
 
-<!-- <div class="filter">
-  <h5>Filter By Brewery</h5>
-  <div class="select-wrapper 6u$ 12u$(medium)">
-    <%= form_tag("/categories/#{@category.id}", method: "get") do %>
-      <%= select_tag "brewery", options_from_collection_for_select(@breweries, "id", "name"), prompt: "All" %> <br>
-      <%= submit_tag "Apply Filter" %>
-    <% end %>
-  </div>
-</div> -->
-
-<!-- <div class="list">
-  <% if @beers.empty? %>
-    <p><em>No results</em></p>
-  <% else %>
-    <ul>
-      <% @beers.each do |beer| %>
-        <li><%= link_to beer.brewery.name, brewery_path(beer.brewery) %>: <%= link_to beer.name, beer_path(beer) %> (abv: <%= beer.abv %>%)</li>
-      <% end %>
-    </ul>
-  <% end %>
-</div> -->
-
 <div class="row 200%">
 	<div class="6u 12u$(medium)">
 		<%= form_tag("/categories/#{@category.id}", method: "get") do %>
@@ -62,8 +40,24 @@
 					<% end %>
 				</table>
 			</div>
-		<% else %>
-			<p><em>No results</em></p>
-		<% end %>
+			<% else %>
+				<div class="table-wrapper">
+					<table>
+						<thead>
+							<tr>
+								<th>Brewery</th>
+								<th>Name</th>
+								<th>Abv</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<td><em>No results</em></td>
+								<td></td>
+								<td></td>
+							</tr>
+					</table>
+				</div>
+			<% end %>
 	</div>
 </div>
