--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -55,9 +55,9 @@
         <article>
           <i class="icon fa-list fa-6" aria-hidden="true"></i>
           <header>
-            <h3>Categories</h3>
+            <h3>Types</h3>
           </header>
-          <p>Browse beer by category</p>
+          <p>Browse beer by type</p>
           <footer>
             <%= link_to "View", categories_path, class: "button" %>
           </footer>
