--- a/app/views/beers/_beer_filters.html.erb
+++ b/app/views/beers/_beer_filters.html.erb
@@ -1,8 +1,8 @@
-<h4>Filters</h4>
+<!-- <h4>Filters</h4> -->
   <div class="row uniform">
     <%= form_tag(path, method: "get") do %>
       <div class="select-wrapper 12u$">
-        <%= select_tag "category", options_from_collection_for_select(categories, "id", "name"), prompt: "All Categories" %> <br>
+        <%= select_tag "category", options_from_collection_for_select(categories, "id", "name"), prompt: "All Types" %> <br>
       </div>
       <div class="select-wrapper 12u$">
         <%= select_tag "brewery", options_from_collection_for_select(breweries, "id", "name"), prompt: "All Breweries" %> <br>
