--- a/app/views/breweries/show.html.erb
+++ b/app/views/breweries/show.html.erb
@@ -10,12 +10,12 @@
 <% end %>
 
 <h3>Beers</h3>
-
+<!-- why is this filter smaller than the others? -->
 <div class="row 200%">
 	<div class="6u 12u$(medium)">
 		<%= form_tag("/breweries/#{@brewery.id}", method: "get") do %>
 	    <div class="select-wrapper 6u$ 12u$(medium)">
-	      <%= select_tag "category", options_from_collection_for_select(@categories, "id", "name"), prompt: "All Categories" %> <br>
+	      <%= select_tag "category", options_from_collection_for_select(@categories, "id", "name"), prompt: "All Types" %> <br>
 	    </div>
 	    <%= submit_tag "Apply Filter" %>
 	  <% end %>
