tweak filter styling on Category#Show and Brewery#Show pages

--- a/app/views/breweries/show.html.erb
+++ b/app/views/breweries/show.html.erb
@@ -10,19 +10,21 @@
 <% end %>
 
 <h3>Beers</h3>
-<!-- why is this filter smaller than the others? -->
+
 <div class="row 200%">
-	<div class="6u 12u$(medium)">
-		<%= form_tag("/breweries/#{@brewery.id}", method: "get") do %>
-	    <div class="select-wrapper 6u$ 12u$(medium)">
-	      <%= select_tag "category", options_from_collection_for_select(@categories, "id", "name"), prompt: "All Types" %> <br>
+	<div class="row uniform 6u 12u$(medium)">
+		<div class="select-wrapper 12u$">
+			<%= form_tag("/breweries/#{@brewery.id}", method: "get") do %>
+	      <%= select_tag "category", options_from_collection_for_select(@categories, "id", "name"), prompt: "All Types" %>
 	    </div>
-	    <%= submit_tag "Apply Filter" %>
+			<div>
+				<%= submit_tag "Apply Filter" %>
+			</div>
 	  <% end %>
 	</div>
 
 
-	<div class="6u$ 12u$(medium)">
+	<div class="6u$ 12u$">
 		<% if !@beers.empty? %>
 			<div class="table-wrapper">
 				<table>
