create and apply partials for each filter

--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -3,8 +3,14 @@
 </header>
 
 <div class="row 200%">
-	<div class="6u 12u$(medium)">
-		<%= render partial: 'beers/beer_filters', locals: {path: beers_path, categories: @categories, breweries: @breweries} %>
+	<div class="6u 12u$(medium) row uniform">
+			<%= form_tag(beers_path, method: "get") do %>
+				<%= render partial: 'beers/category_filter', locals: {categories: @categories} %>
+				<%= render partial: 'beers/brewery_filter', locals: {breweries: @breweries} %>
+				<div>
+					<%= submit_tag "Apply Filter" %>
+				</div>
+			<% end %>
 	</div>
 
 	<div class="6u$ 12u$(medium)">
