--- a/app/views/breweries/show.html.erb
+++ b/app/views/breweries/show.html.erb
@@ -12,11 +12,9 @@
 <h3>Beers</h3>
 
 <div class="row 200%">
-	<div class="row uniform 6u 12u$(medium)">
-		<div class="select-wrapper 12u$">
-			<%= form_tag("/breweries/#{@brewery.id}", method: "get") do %>
-	      <%= select_tag "category", options_from_collection_for_select(@categories, "id", "name"), prompt: "All Types" %>
-	    </div>
+	<div class="6u 12u$(medium)">
+		<%= form_tag("/breweries/#{@brewery.id}", method: "get") do %>
+      <%= render partial: 'beers/category_filter', locals: {categories: @categories} %>
 			<div>
 				<%= submit_tag "Apply Filter" %>
 			</div>
