--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -11,11 +11,9 @@
 <h3>Beers</h3>
 
 <div class="row 200%">
-	<div class="row uniform 6u 12u$(medium)">
-		<div class="select-wrapper 12u$">
-			<%= form_tag("/categories/#{@category.id}", method: "get") do %>
-	      <%= select_tag "brewery", options_from_collection_for_select(@breweries, "id", "name"), prompt: "All Breweries" %>
-	    </div>
+	<div class="6u 12u$(medium)">
+		<%= form_tag("/categories/#{@category.id}", method: "get") do %>
+			<%= render partial: 'beers/brewery_filter', locals: {breweries: @breweries} %>
 			<div>
 				<%= submit_tag "Apply Filter" %>
 			</div>
