change Beers#Index and UserBeers#Index to sory list by brewery name

--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -25,7 +25,7 @@
 						</tr>
 					</thead>
 					<tbody>
-					<% @beers.alpha_sorted.each do |beer| %>
+					<% @beers.sort_by_brewery.each do |beer| %>
 						<tr>
 							<td><%= link_to beer.brewery.name, brewery_path(beer.brewery) %></td>
 							<td><%= link_to beer.name, beer_path(beer) %></td>
