--- a/app/views/breweries/show.html.erb
+++ b/app/views/breweries/show.html.erb
@@ -14,7 +14,7 @@
 <div class="row 200%">
 	<div class="6u 12u$(medium)">
 		<%= form_tag("/breweries/#{@brewery.id}", method: "get") do %>
-      <%= render partial: 'beers/category_filter', locals: {categories: @categories} %>
+      <%= render partial: 'application/category_filter', locals: {categories: @categories} %>
 			<div>
 				<%= submit_tag "Apply Filter" %>
 			</div>
