--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -13,7 +13,7 @@
 <div class="row 200%">
 	<div class="6u 12u$(medium)">
 		<%= form_tag("/categories/#{@category.id}", method: "get") do %>
-			<%= render partial: 'beers/brewery_filter', locals: {breweries: @breweries} %>
+			<%= render partial: 'application/brewery_filter', locals: {breweries: @breweries} %>
 			<div>
 				<%= submit_tag "Apply Filter" %>
 			</div>
