--- a/app/views/user_beers/index.html.erb
+++ b/app/views/user_beers/index.html.erb
@@ -5,8 +5,8 @@
 <div class="row 200%">
 	<div class="6u 12u$(medium)">
 		<%= form_tag(user_user_beers_path, method: "get") do %>
-			<%= render partial: 'beers/category_filter', locals: {categories: @categories} %>
-			<%= render partial: 'beers/brewery_filter', locals: { breweries: @breweries} %>
+			<%= render partial: 'application/category_filter', locals: {categories: @categories} %>
+			<%= render partial: 'application/brewery_filter', locals: { breweries: @breweries} %>
 			<div>
 				<%= submit_tag "Apply Filter" %>
 			</div>
